--- a/app/src/main/res/layout/practice_square_image_view.xml
+++ b/app/src/main/res/layout/practice_square_image_view.xml
@@ -44,7 +44,7 @@
                 <android.support.v7.widget.AppCompatSeekBar
                     android:id="@+id/widthBar"
                     android:layout_width="0dp"
-                    android:layout_height="24dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1" />
 
                 <TextView
@@ -63,7 +63,7 @@
                 <android.support.v7.widget.AppCompatSeekBar
                     android:id="@+id/heightBar"
                     android:layout_width="0dp"
-                    android:layout_height="24dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1" />
 
                 <TextView
